# microcap-quant

./: .gitignore  AGENT.md  DEPLOYMENT.md  Dockerfile  LICENSE  RAILWAY_DEPLOYMENT.md  README.md  README_Deep_Research.md  debug_ai_response.py  deploy-to-railway.md  pyproject.toml  requirements.txt  run_bot.sh  state.json  subagents.md  test_ai_only.py  test_alpaca.py  test_config_only.py  test_deep_research.py  test_email.py  trade_bot.py
auto_trader/: ai_decision_engine.py  automated_trader.py  broker_interface.py  config.py  notification_system.py  risk_gate.py
config/: .env.example  README.md  __init__.py
deployment/: RAILWAY_DEPLOYMENT.md  README.md  railway.json
docs/: Deep_Research_Index.md  Environment_Variables.md  QA.md
tests/: README.md  __init__.py  test_env.py
